# Znodes-Crawler-Zcash

./: $null  .gitignore  Cargo.toml  MAPA_ARREGLADO.md  MAPA_NITRO.md  README.md  main.rs  metrics.rs  protocol.rs  rpc.rs  znodes-diag.sh
docs/: CAMBIOS_ZNODES.md  SOLUCION_FRONTEND.md
frontend/: index.html  index.html.backup  robots.txt  sitemap.xml  test.html
src/: network.rs  protocol.rs
ziggurat-crawler/: Cargo.toml
ziggurat-crawler/src/tools/crawler/: main.rs  protocol.rs  rpc.rs
